--- a/GLCircleScrollVeiw/Info.plist
+++ b/GLCircleScrollVeiw/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>GL.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.leho.beauty</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
